// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ContentBlockNode 1`] = `
<div
  data-contents="true"
>
  <blockquote
    data-block={true}
    data-editor="editor"
    data-offset-key="A-0-0"
  >
    <div
      className="public__DraftStyleDefault__block public__DraftStyleDefault__ltr"
      data-offset-key="A-0-0"
    >
      <span
        data-offset-key="A-0-0"
        style={Object {}}
      >
        <span
          data-text="true"
        >
          Alpha
        </span>
      </span>
    </div>
  </blockquote>
</div>
`;

exports[`renders ContentBlockNodes 1`] = `
<div
  data-contents="true"
>
  <blockquote
    data-block={true}
    data-editor="editor"
    data-offset-key="A-0-0"
  >
    <div
      className="public__DraftStyleDefault__block public__DraftStyleDefault__ltr"
      data-offset-key="A-0-0"
    >
      <ol
        className="public__DraftStyleDefault__ol"
        data-offset-key="B-0-0"
      >
        <li
          data-block={true}
          data-editor="editor"
          data-offset-key="B-0-0"
        >
          <div
            className="public__DraftStyleDefault__block public__DraftStyleDefault__ltr"
            data-offset-key="B-0-0"
          >
            <h1
              data-block={true}
              data-editor="editor"
              data-offset-key="C-0-0"
            >
              <div
                className="public__DraftStyleDefault__block public__DraftStyleDefault__ltr"
                data-offset-key="C-0-0"
              >
                <span
                  data-offset-key="C-0-0"
                  style={Object {}}
                >
                  <span
                    data-text="true"
                  >
                    header inside list
                  </span>
                </span>
              </div>
            </h1>
          </div>
        </li>
      </ol>
    </div>
  </blockquote>
  <h2
    data-block={true}
    data-editor="editor"
    data-offset-key="D-0-0"
  >
    <div
      className="public__DraftStyleDefault__block public__DraftStyleDefault__ltr"
      data-offset-key="D-0-0"
    >
      <span
        data-offset-key="D-0-0"
        style={Object {}}
      >
        <span
          data-text="true"
        >
          header two
        </span>
      </span>
    </div>
  </h2>
</div>
`;

exports[`renders ContentBlockNodes with root blocks that have wrapperTemplate 1`] = `
<div
  data-contents="true"
>
  <ol
    className="public__DraftStyleDefault__ol"
    data-offset-key="A-0-0"
  >
    <li
      data-block={true}
      data-editor="editor"
      data-offset-key="A-0-0"
    >
      <div
        className="public__DraftStyleDefault__block public__DraftStyleDefault__ltr"
        data-offset-key="A-0-0"
      >
        <span
          data-offset-key="A-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            list one
          </span>
        </span>
      </div>
    </li>
    <li
      data-block={true}
      data-editor="editor"
      data-offset-key="B-0-0"
    >
      <div
        className="public__DraftStyleDefault__block public__DraftStyleDefault__ltr"
        data-offset-key="B-0-0"
      >
        <span
          data-offset-key="B-0-0"
          style={Object {}}
        >
          <span
            data-text="true"
          >
            list two
          </span>
        </span>
      </div>
    </li>
  </ol>
</div>
`;
